--- a/css/globales.less
+++ b/css/globales.less
@@ -1,14 +1,22 @@
+@color-primario: #333333;
+@color-claro: #FFFFFF;
+@color-secundario: #8841da;
+@color-variacion: #012179;
+@Fuente1: 'lato', sans-serif;
+@Fuente2: 'Oswald', sans-serif;
+
 * {
     box-sizing: border-box;
 }
 
 body {
     margin: 0;
-    font-family: 'lato', sans-serif;
+    font-family: @Fuente1;
+    color: @color-primario;
 }
 
 h1,h2,h3 {
     margin: 0;
-    font-family: 'Oswald', sans-serif;
+    font-family: @Fuente2;
     text-transform: uppercase;
 }
