--- a/css/globales.less
+++ b/css/globales.less
@@ -1,9 +1,10 @@
-@color-primario: #333333;
-@color-claro: #FFFFFF;
+@color-primario: #333;
+@color-claro: #FFF;
 @color-secundario: #8841da;
 @color-variacion: #012179;
 @Fuente1: 'lato', sans-serif;
 @Fuente2: 'Oswald', sans-serif;
+@Fuente-base: 18px;
 
 * {
     box-sizing: border-box;
