--- a/css/intros.less
+++ b/css/intros.less
@@ -26,6 +26,7 @@
     &__categoria {
         font-family: @Fuente2;
         text-transform: uppercase;
+        color: fade(@color-claro, 50%);
     }
     &__titulo {
         font-family: @Fuente2;
@@ -40,7 +41,6 @@
         left: 0;
         right: 0;
         color: @color-claro;
-        ;
         img {
             width: 60px;
             height: 50px;
@@ -51,5 +51,9 @@
         span {
             display: inline-block;
         }
+        &-titulo {
+            color: fade(@color-claro, 50%);
+        }
+
     }
 };
