--- a/css/platzigames.css
+++ b/css/platzigames.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   font-family: 'lato', sans-serif;
-  color: #333333;
+  color: #333;
 }
 h1,
 h2,
@@ -12,6 +12,22 @@ h3 {
   margin: 0;
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
+}
+.articulo--principal {
+  max-width: 660px;
+  margin: 0 auto;
+  line-height: 18px 10%;
+}
+.articulo--principal__intro {
+  font-size: 26px;
+}
+.articulo--principal h2 {
+  margin: 40px 0 40px 0;
+  font-size: 50px;
+  text-align: center;
+}
+.articulo--principal h3 {
+  color: #8841da;
 }
 .intro {
   width: 1340px;
@@ -37,11 +53,12 @@ h3 {
   left: 0;
   right: 0;
   text-align: center;
-  color: #FFFFFF;
+  color: #FFF;
 }
 .intro__categoria {
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
+  color: rgba(255, 255, 255, 0.5);
 }
 .intro__titulo {
   font-family: 'Oswald', sans-serif;
@@ -55,7 +72,7 @@ h3 {
   top: 400px;
   left: 0;
   right: 0;
-  color: #FFFFFF;
+  color: #FFF;
 }
 .intro__autor img {
   width: 60px;
@@ -67,14 +84,6 @@ h3 {
 .intro__autor span {
   display: inline-block;
 }
-.articulo--principal {
-  max-width: 660px;
-  margin: 0 auto;
-}
-.articulo--principal h2 {
-  margin: 40px 0 40px 0;
-  font-size: 50px;
-}
-.articulo--principal h3 {
-  color: #8841da;
+.intro__autor-titulo {
+  color: rgba(255, 255, 255, 0.5);
 }
