--- a/css/intros.less
+++ b/css/intros.less
@@ -4,6 +4,8 @@
     padding: 10px;
     margin: 0;
     position: relative;
+    background-color: @color-claro;
+    .sombra-caja;
     &__imagen {
         width: 1320px;
         position: absolute;
@@ -24,13 +26,11 @@
         color: @color-claro;
     }
     &__categoria {
-        font-family: @Fuente2;
-        text-transform: uppercase;
+        .Oswald;
         color: fade(@color-claro, 50%);
     }
     &__titulo {
-        font-family: @Fuente2;
-        text-transform: uppercase;
+        .Oswald;
         font-size: 50px;
     }
     &__autor {
