--- a/css/platzigames.css
+++ b/css/platzigames.css
@@ -1,3 +1,11 @@
+.sombra-caja {
+  box-shadow: 0px 5px 15px 0px rgba(51, 51, 51, 0.5);
+}
+.Oswald {
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
 * {
   box-sizing: border-box;
 }
@@ -12,6 +20,7 @@ h3 {
   margin: 0;
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
+  font-weight: 700;
 }
 .articulo--principal {
   max-width: 660px;
@@ -35,6 +44,8 @@ h3 {
   padding: 10px;
   margin: 0;
   position: relative;
+  background-color: #FFF;
+  box-shadow: 0px 5px 15px 0px rgba(51, 51, 51, 0.5);
 }
 .intro__imagen {
   width: 1320px;
@@ -58,11 +69,13 @@ h3 {
 .intro__categoria {
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
+  font-weight: 700;
   color: rgba(255, 255, 255, 0.5);
 }
 .intro__titulo {
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
+  font-weight: 700;
   font-size: 50px;
 }
 .intro__autor {
@@ -86,4 +99,32 @@ h3 {
 }
 .intro__autor-titulo {
   color: rgba(255, 255, 255, 0.5);
+}
+.contenedor--cajas {
+  width: 1400px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  padding-bottom: 25px;
+}
+.caja {
+  max-width: 430px;
+  box-shadow: 0px 5px 15px 0px rgba(51, 51, 51, 0.5);
+}
+.caja__contenido {
+  padding: 25px;
+  background-color: #FFF;
+}
+.caja span {
+  color: #8841da;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.caja a {
+  text-decoration: none;
+  color: #012179;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
 }
